# information-retrieval-system-public-transport

./: .gitignore  CMakeLists.txt  Kursach-Info.plist  README.md  main.cpp  transport.txt
